# h3-regions

./: .gitignore  README.MD  README.md  average_russia_7.csv  common_types.py  form_new.py  main.py  parse_tsv.py  pyproject.toml  russia_mean_heigts_7_level.csv  wbk_test.py  wbk_utils.py
grep_commands/: filter_kinds.grep  get_all_kinds.grep
modules/: common_types.py  draw_polygon_h3.py  h3_utils.py  parse_tsv.py  parse_utils.py  serializer.py  sql_writer.py  wbk_utils.py
modules/elevation/: api.py  elevation.py
modules/elevation/tests/: test_elevation.py
modules/region_to_hexagons/: api.py  h3_utils.py  parse_utils.py  serializer.py  sql_writer.py  wbk_utils.py
modules/region_to_hexagons/tests/: test_parse_utils.py  test_serializer.py
modules/region_to_hexagons/tests/assets/: moscow_multipolygon.txt  palauli.wkb
modules/tests/: test_h3_utils.py  test_parse_utils.py  test_serializer.py
modules/tests/assets/: attributes.geojson  huata_polygon.txt  moscow_multipolygon.tsv
