[tool.poetry]
name = "h3-regions"
version = "0.1.0"
description = ""
authors = ["d.shipilov <d.shipilov@vk.team>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
shapely = "^2.0.6"
pandas = "^2.2.3"
black = "^24.10.0"
h3 = "4.1.0b3"
pytest = "^8.3.3"
geopandas = "^1.0.1"
contextily = "^1.6.2"
aiohttp = "^3.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
